[package]
name = "kubos-file-client"
version = "0.1.0"
authors = ["Ryan Plauche <ryan@kubos.co>", "Patrick Oppel <patrick.oppel94@gmail.com"]
edition = "2018"

[dependencies]
simplelog = "^0.12.0"
clap = "4.0"
log = "^0.4.0"
file-protocol = { git = "ssh://git@github.com/Cube-OS/file-protocol", features = ["client"]}
failure = "0.1.2"