[package]
name = "ftp-client"
version = "0.1.0"
authors = ["Ryan Plauche <ryan@kubos.co>", "Patrick Oppel <patrick.oppel94@gmail.com"]
edition = "2018"

[dependencies]
cbor-protocol = { git = "ssh://git@github.com/Cube-OS/cbor-protocol.git", branch = "stream"}
failure = "0.1.2"
file-protocol = {git = "ssh://git@github.com/Cube-OS/file-protocol.git", branch = "stream", features = ["client"]}
cubeos-service = { git = "ssh://git@github.com/Cube-OS/cubeos-service"}
log = "^0.4.0"
serde_cbor = "0.10.2"
udp-rs = { git = "ssh://git@github.com/Cube-OS/udp-rs"}
hal-stream = { git = "ssh://git@github.com/Cube-OS/hal-stream" }
serde = { version = "1.0.58", features = ["derive"] }

[features]
default = []
ground = ["cubeos-service/ground"]
debug = ["cubeos-service/debug"]