[package]
name = "cubeos-file-client"
version = "0.1.0"
authors = ["Patrick Oppel <patrick.oppel@sydney.edu.au"]
edition = "2018"

[dependencies]
simplelog = "^0.12.0"
clap = "3.2"
log = "^0.4.0"
file-protocol = { git = "ssh://github.com/Cube-OS/file-protocol" }
bincode = { git = "ssh://github.com/Cube-OS/bincode" }
failure = "0.1.8"